@@ -1,3 +1,7 @@
+Fri Jul 11 11:23:02 CEST 2008 Christian Anthon <anthon@kiku.dk>
+
+	* rollout.c: move log_name out of globals
+
 Mon Jul  7 22:42:20 CEST 2008 Petr Kadlec <mormegil@centrum.cz>
 
 	* eval.c, gnubg.c, gtkgame.c, matchequity.c, render.c, renderprefs.c
